locators, html 재 업로드

--- a/html_data/settings.html
+++ b/html_data/settings.html
@@ -1,4 +1,4 @@
-<!-- HOME > My Page > Edit Profile -->
+<!-- settings -->
 <body>
   <div id="root">
     <div>
@@ -28,10 +28,10 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/@5">
-                <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA4MDRfMTk0%2FMDAxNTY0ODk2MzMzNTc5.YO8_JvHzGwv_j3XsgmZ0I2-gkXaUlOB3hfTf1RunF8Yg.Xmc879vPlIAtB29t5BEn_DP3B5q1JnUp_gCguCQVg3cg.GIF.yuzy%2Fgiphy-4.gif&type=sc960_832_gifhttps://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA4MDRfMTk0%2FMDAxNTY0ODk2MzMzNTc5.YO8_JvHzGwv_j3XsgmZ0I2-gkXaUlOB3hfTf1RunF8Yg.Xmc879vPlIAtB29t5BEn_DP3B5q1JnUp_gCguCQVg3cg.GIF.yuzy%2Fgiphy-4.gif&type=sc960_832_gif" class="user-pic" alt="5">
+              <a class="nav-link" href="/@1">
+                <img src="https://api.realworld.io/images/smiley-cyrus.jpeg" class="user-pic" alt="1">
                 </img>
-                "5"
+                "1"
               </a>
             </li>
           </ul>
@@ -47,11 +47,11 @@
               <form>
                 <fieldset>
                   <fieldset class="form-group">
-                    <input class="form-control" type="text" placeholder="URL of profile picture" value="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA4MDRfMTk0%2FMDAxNTY0ODk2MzMzNTc5.YO8_JvHzGwv_j3XsgmZ0I2-gkXaUlOB3hfTf1RunF8Yg.Xmc879vPlIAtB29t5BEn_DP3B5q1JnUp_gCguCQVg3cg.GIF.yuzy%2Fgiphy-4.gif&type=sc960_832_gifhttps://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA4MDRfMTk0%2FMDAxNTY0ODk2MzMzNTc5.YO8_JvHzGwv_j3XsgmZ0I2-gkXaUlOB3hfTf1RunF8Yg.Xmc879vPlIAtB29t5BEn_DP3B5q1JnUp_gCguCQVg3cg.GIF.yuzy%2Fgiphy-4.gif&type=sc960_832_gif">
+                    <input class="form-control" type="text" placeholder="URL of profile picture" value="https://api.realworld.io/images/smiley-cyrus.jpeg">
                     </input>
                   </fieldset>
                   <fieldset class="form-group">
-                    <input class="form-control form-control-lg" type="text" placeholder="Username" value="5">
+                    <input class="form-control form-control-lg" type="text" placeholder="Username" value="1">
                     </input>
                   </fieldset>
                   <fieldset class="form-group">
@@ -59,7 +59,7 @@
                     </textarea>
                   </fieldset>
                   <fieldset class="form-group">
-                    <input class="form-control form-control-lg" type="email" placeholder="Email" value="5@5">
+                    <input class="form-control form-control-lg" type="email" placeholder="Email" value="1@1">
                     </input>
                   </fieldset>
                   <fieldset class="form-group">
