--- a/html_data/article.html
+++ b/html_data/article.html
@@ -14,45 +14,59 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/login">
-                "Sign in"
+              <a class="nav-link" href="/editor">
+                <i class="ion-compose">
+                </i>
+                "New Post"
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/register">
-                "Sign up"
+              <a class="nav-link" href="/settings">
+                <i class="ion-gear-a">
+                </i>
+                "Settings"
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/@1">
+                <img src="https://api.realworld.io/images/smiley-cyrus.jpeg" class="user-pic" alt="1">
+                </img>
+                "1"
               </a>
             </li>
           </ul>
         </div>
       </nav>
-      <div class="auth-page">
+      <div class="home-page">
         <div class="container page">
           <div class="row">
-            <div class="col-md-6 offset-md-3 col-xs-12">
-              <h1 class="text-xs-center">
-                "Sign In"
-              </h1>
-              <p class="text-xs-center">
-                <a href="/register">
-                  "Need an account?"
-                </a>
-              </p>
-              <form>
-                <fieldset>
-                  <fieldset class="form-group">
-                    <input class="form-control form-control-lg" type="email" placeholder="Email" value="1@1">
-                    </input>
-                  </fieldset>
-                  <fieldset class="form-group">
-                    <input class="form-control form-control-lg" type="password" placeholder="Password" value="1">
-                    </input>
-                  </fieldset>
-                  <button class="btn btn-lg btn-primary pull-xs-right" type="submit" disabled="">
-                    "Sign in"
-                  </button>
-                </fieldset>
-              </form>
+            <div class="col-md-9">
+              <div class="feed-toggle">
+                <ul class="nav nav-pills outline-active">
+                  <li class="nav-item">
+                    <a href="" class="nav-link active">
+                      "Your Feed"
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="" class="nav-link">
+                      "Global Feed"
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="article-preview">
+                "No articles are here... yet."
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="sidebar">
+                <p>
+                  "Popular Tags"
+                </p>
+                <div class="tag-list">
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -179,76 +193,81 @@
           </ul>
         </div>
       </nav>
-      <div class="article-page">
-        <div class="banner">
+      <div class="profile-page">
+        <div class="user-info">
           <div class="container">
-            <h1>
-              "ㅇ"
-            </h1>
-            <div class="article-meta">
-              <a href="/@1">
-                <img src="https://api.realworld.io/images/smiley-cyrus.jpeg" alt="1">
+            <div class="row">
+              <div class="col-xs-12 col-md-10 offset-md-1">
+                <img class="user-img" src="https://api.realworld.io/images/smiley-cyrus.jpeg" alt="1">
                 </img>
-              </a>
-              <div class="info">
-                <a class="author" href="/@1">
+                <h4>
                   "1"
+                </h4>
+                <p>
+                </p>
+                <a class="btn btn-sm btn-outline-secondary action-btn" href="/settings">
+                  <i class="ion-gear-a">
+                  </i>
+                  "Edit Profile Settings"
                 </a>
-                <span class="date">
-                  "Fri May 16 2025"
-                </span>
               </div>
-              <span>
-                <a class="btn btn-outline-secondary btn-sm" href="/editor/-1">
-                  <i class="ion-edit">
-                  </i>
-                  "Edit Article"
-                </a>
-                <button class="btn btn-outline-danger btn-sm">
-                  <i class="ion-trash-a">
-                  </i>
-                  "Delete Article"
-                </button>
-              </span>
             </div>
           </div>
         </div>
-        <div class="container page">
-          <div class="row article-content">
-            <div class="col-xs-12">
-              <div>
-                <p>
-                  "ㅇ"
-                </p>
-              </div>
-              <ul class="tag-list">
-              </ul>
-            </div>
-          </div>
-          <hr>
-          </hr>
-          <div class="article-actions">
-          </div>
+        <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-md-8 offset-md-2">
-              <div>
-                <list-errors>
-                </list-errors>
-                <form class="card comment-form">
-                  <div class="card-block">
-                    <textarea class="form-control" placeholder="Write a comment..." rows="3">
-                    </textarea>
-                  </div>
-                  <div class="card-footer">
-                    <img src="https://api.realworld.io/images/smiley-cyrus.jpeg" class="comment-author-img" alt="1">
-                    </img>
-                    <button class="btn btn-sm btn-primary" type="submit">
-                      "Post Comment"
-                    </button>
-                  </div>
-                </form>
+            <div class="col-xs-12 col-md-10 offset-md-1">
+              <div class="articles-toggle">
+                <ul class="nav nav-pills outline-active">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/@1">
+                      "My Articles"
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/@1/favorites">
+                      "Favorited Articles"
+                    </a>
+                  </li>
+                </ul>
               </div>
               <div>
+                <div class="article-preview">
+                  <div class="article-meta">
+                    <a href="/@1">
+                      <img src="https://api.realworld.io/images/smiley-cyrus.jpeg" alt="1">
+                      </img>
+                    </a>
+                    <div class="info">
+                      <a class="author" href="/@1">
+                        "1"
+                      </a>
+                      <span class="date">
+                        "Fri May 16 2025"
+                      </span>
+                    </div>
+                    <div class="pull-xs-right">
+                      <button class="btn btn-sm btn-outline-primary">
+                        <i class="ion-heart">
+                        </i>
+                        "0"
+                      </button>
+                    </div>
+                  </div>
+                  <a class="preview-link" href="/article/-1">
+                    <h1>
+                      "ㅇ"
+                    </h1>
+                    <p>
+                      "ㅇ"
+                    </p>
+                    <span>
+                      "Read more..."
+                    </span>
+                    <ul class="tag-list">
+                    </ul>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
