--- a/html_data/profile.html
+++ b/html_data/profile.html
@@ -211,3 +211,90 @@
   <script type="text/javascript" src="/static/js/bundle.js">
   </script>
 </body>
+<!-- profile -->
+<body>
+  <div id="root">
+    <div>
+      <nav class="navbar navbar-light">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+            "conduit"
+          </a>
+          <ul class="nav navbar-nav pull-xs-right">
+            <li class="nav-item">
+              <a class="nav-link" href="/">
+                "Home"
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/editor">
+                <i class="ion-compose">
+                </i>
+                "New Post"
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/settings">
+                <i class="ion-gear-a">
+                </i>
+                "Settings"
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/@1">
+                <img src="https://api.realworld.io/images/smiley-cyrus.jpeg" class="user-pic" alt="1">
+                </img>
+                "1"
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="settings-page">
+        <div class="container page">
+          <div class="row">
+            <div class="col-md-6 offset-md-3 col-xs-12">
+              <h1 class="text-xs-center">
+                "Your Settings"
+              </h1>
+              <form>
+                <fieldset>
+                  <fieldset class="form-group">
+                    <input class="form-control" type="text" placeholder="URL of profile picture" value="https://api.realworld.io/images/smiley-cyrus.jpeg">
+                    </input>
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <input class="form-control form-control-lg" type="text" placeholder="Username" value="1">
+                    </input>
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <textarea class="form-control form-control-lg" rows="8" placeholder="Short bio about you">
+                    </textarea>
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <input class="form-control form-control-lg" type="email" placeholder="Email" value="1@1">
+                    </input>
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <input class="form-control form-control-lg" type="password" placeholder="New Password" value="">
+                    </input>
+                  </fieldset>
+                  <button class="btn btn-lg btn-primary pull-xs-right" type="submit">
+                    "Update Settings"
+                  </button>
+                </fieldset>
+              </form>
+              <hr>
+              </hr>
+              <button class="btn btn-outline-danger">
+                "Or click here to logout."
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript" src="/static/js/bundle.js">
+  </script>
+</body>
