--- a/html_data/Home.html
+++ b/html_data/Home.html
@@ -14,59 +14,45 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/editor">
-                <i class="ion-compose">
-                </i>
-                "New Post"
+              <a class="nav-link" href="/login">
+                "Sign in"
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/settings">
-                <i class="ion-gear-a">
-                </i>
-                "Settings"
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/@1">
-                <img src="https://api.realworld.io/images/smiley-cyrus.jpeg" class="user-pic" alt="1">
-                </img>
-                "1"
+              <a class="nav-link" href="/register">
+                "Sign up"
               </a>
             </li>
           </ul>
         </div>
       </nav>
-      <div class="home-page">
+      <div class="auth-page">
         <div class="container page">
           <div class="row">
-            <div class="col-md-9">
-              <div class="feed-toggle">
-                <ul class="nav nav-pills outline-active">
-                  <li class="nav-item">
-                    <a href="" class="nav-link active">
-                      "Your Feed"
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="" class="nav-link">
-                      "Global Feed"
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="article-preview">
-                "No articles are here... yet."
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="sidebar">
-                <p>
-                  "Popular Tags"
-                </p>
-                <div class="tag-list">
-                </div>
-              </div>
+            <div class="col-md-6 offset-md-3 col-xs-12">
+              <h1 class="text-xs-center">
+                "Sign In"
+              </h1>
+              <p class="text-xs-center">
+                <a href="/register">
+                  "Need an account?"
+                </a>
+              </p>
+              <form>
+                <fieldset>
+                  <fieldset class="form-group">
+                    <input class="form-control form-control-lg" type="email" placeholder="Email" value="1@1">
+                    </input>
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <input class="form-control form-control-lg" type="password" placeholder="Password" value="1">
+                    </input>
+                  </fieldset>
+                  <button class="btn btn-lg btn-primary pull-xs-right" type="submit" disabled="">
+                    "Sign in"
+                  </button>
+                </fieldset>
+              </form>
             </div>
           </div>
         </div>
