html, 로케이터 재추출, 테스트코드 추가(미완성)

--- a/html_data/profile.html
+++ b/html_data/profile.html
@@ -48,6 +48,7 @@
                   "1"
                 </h4>
                 <p>
+                  "goodgoodgood"
                 </p>
                 <a class="btn btn-sm btn-outline-secondary action-btn" href="/settings">
                   <i class="ion-gear-a">
@@ -87,7 +88,7 @@
                         "1"
                       </a>
                       <span class="date">
-                        "Fri May 16 2025"
+                        "Sat May 17 2025"
                       </span>
                     </div>
                     <div class="pull-xs-right">
@@ -98,12 +99,12 @@
                       </button>
                     </div>
                   </div>
-                  <a class="preview-link" href="/article/-1">
+                  <a class="preview-link" href="/article/0-1">
                     <h1>
-                      "ㅇ"
+                      "0"
                     </h1>
                     <p>
-                      "ㅇ"
+                      "0"
                     </p>
                     <span>
                       "Read more..."
@@ -112,6 +113,164 @@
                     </ul>
                   </a>
                 </div>
+                <div class="article-preview">
+                  <div class="article-meta">
+                    <a href="/@1">
+                      <img src="https://api.realworld.io/images/smiley-cyrus.jpeg" alt="1">
+                      </img>
+                    </a>
+                    <div class="info">
+                      <a class="author" href="/@1">
+                        "1"
+                      </a>
+                      <span class="date">
+                        "Sat May 17 2025"
+                      </span>
+                    </div>
+                    <div class="pull-xs-right">
+                      <button class="btn btn-sm btn-outline-primary">
+                        <i class="ion-heart">
+                        </i>
+                        "0"
+                      </button>
+                    </div>
+                  </div>
+                  <a class="preview-link" href="/article/9-1">
+                    <h1>
+                      "9"
+                    </h1>
+                    <p>
+                      "9"
+                    </p>
+                    <span>
+                      "Read more..."
+                    </span>
+                    <ul class="tag-list">
+                    </ul>
+                  </a>
+                </div>
+                <div class="article-preview">
+                  <div class="article-meta">
+                    <a href="/@1">
+                      <img src="https://api.realworld.io/images/smiley-cyrus.jpeg" alt="1">
+                      </img>
+                    </a>
+                    <div class="info">
+                      <a class="author" href="/@1">
+                        "1"
+                      </a>
+                      <span class="date">
+                        "Sat May 17 2025"
+                      </span>
+                    </div>
+                    <div class="pull-xs-right">
+                      <button class="btn btn-sm btn-outline-primary">
+                        <i class="ion-heart">
+                        </i>
+                        "0"
+                      </button>
+                    </div>
+                  </div>
+                  <a class="preview-link" href="/article/8-1">
+                    <h1>
+                      "8"
+                    </h1>
+                    <p>
+                      "8"
+                    </p>
+                    <span>
+                      "Read more..."
+                    </span>
+                    <ul class="tag-list">
+                    </ul>
+                  </a>
+                </div>
+                <div class="article-preview">
+                  <div class="article-meta">
+                    <a href="/@1">
+                      <img src="https://api.realworld.io/images/smiley-cyrus.jpeg" alt="1">
+                      </img>
+                    </a>
+                    <div class="info">
+                      <a class="author" href="/@1">
+                        "1"
+                      </a>
+                      <span class="date">
+                        "Sat May 17 2025"
+                      </span>
+                    </div>
+                    <div class="pull-xs-right">
+                      <button class="btn btn-sm btn-outline-primary">
+                        <i class="ion-heart">
+                        </i>
+                        "0"
+                      </button>
+                    </div>
+                  </div>
+                  <a class="preview-link" href="/article/77-1">
+                    <h1>
+                      "77"
+                    </h1>
+                    <p>
+                      "77"
+                    </p>
+                    <span>
+                      "Read more..."
+                    </span>
+                    <ul class="tag-list">
+                    </ul>
+                  </a>
+                </div>
+                <div class="article-preview">
+                  <div class="article-meta">
+                    <a href="/@1">
+                      <img src="https://api.realworld.io/images/smiley-cyrus.jpeg" alt="1">
+                      </img>
+                    </a>
+                    <div class="info">
+                      <a class="author" href="/@1">
+                        "1"
+                      </a>
+                      <span class="date">
+                        "Sat May 17 2025"
+                      </span>
+                    </div>
+                    <div class="pull-xs-right">
+                      <button class="btn btn-sm btn-outline-primary">
+                        <i class="ion-heart">
+                        </i>
+                        "0"
+                      </button>
+                    </div>
+                  </div>
+                  <a class="preview-link" href="/article/66-1">
+                    <h1>
+                      "66"
+                    </h1>
+                    <p>
+                      "66"
+                    </p>
+                    <span>
+                      "Read more..."
+                    </span>
+                    <ul class="tag-list">
+                    </ul>
+                  </a>
+                </div>
+                <nav>
+                  <ul class="pagination">
+                    <li class="page-item">
+                      <a class="page-link" href="">
+                        "1"
+                      </a>
+                    </li>
+                    <li class="page-item">
+                      <a class="page-link" href="">
+                        "2"
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
               </div>
             </div>
           </div>
@@ -172,6 +331,7 @@
                   "1"
                 </h4>
                 <p>
+                  "goodgoodgood"
                 </p>
                 <a class="btn btn-sm btn-outline-secondary action-btn" href="/settings">
                   <i class="ion-gear-a">
@@ -199,8 +359,103 @@
                   </li>
                 </ul>
               </div>
-              <div class="article-preview">
-                "No articles are here... yet."
+              <div>
+                <div class="article-preview">
+                  <div class="article-meta">
+                    <a href="/@Xiaohong Jiménez">
+                      <img src="https://api.realworld.io/images/demo-avatar.png" alt="Xiaohong Jiménez">
+                      </img>
+                    </a>
+                    <div class="info">
+                      <a class="author" href="/@Xiaohong Jiménez">
+                        "Xiaohong Jiménez"
+                      </a>
+                      <span class="date">
+                        "Sat May 17 2025"
+                      </span>
+                    </div>
+                    <div class="pull-xs-right">
+                      <button class="btn btn-sm btn-primary">
+                        <i class="ion-heart">
+                        </i>
+                        "1"
+                      </button>
+                    </div>
+                  </div>
+                  <a class="preview-link" href="/article/If-we-back-up-the-application-we-can-get-to-the-TCP-bus-through-the-auxiliary-FTP-hard-drive!-2">
+                    <h1>
+                      "If we back up the application, we can get to the TCP bus through the auxiliary FTP hard drive!"
+                    </h1>
+                    <p>
+                      "Cupiditate voluptas cumque aspernatur. Adipisci voluptatibus vel eos. Doloremque commodi aliquid occaecati quia provident. Voluptatem tempore doloribus architecto rem quidem quaerat ipsam possimus. Laboriosam quisquam aut illo necessitatibus quo ducimus. Eum cupiditate sint a placeat dolores nemo."
+                    </p>
+                    <span>
+                      "Read more..."
+                    </span>
+                    <ul class="tag-list">
+                      <li class="tag-default tag-pill tag-outline">
+                        "aliquid"
+                      </li>
+                      <li class="tag-default tag-pill tag-outline">
+                        "labore"
+                      </li>
+                      <li class="tag-default tag-pill tag-outline">
+                        "est"
+                      </li>
+                      <li class="tag-default tag-pill tag-outline">
+                        "necessitatibus"
+                      </li>
+                    </ul>
+                  </a>
+                </div>
+                <div class="article-preview">
+                  <div class="article-meta">
+                    <a href="/@Xiaohong Jiménez">
+                      <img src="https://api.realworld.io/images/demo-avatar.png" alt="Xiaohong Jiménez">
+                      </img>
+                    </a>
+                    <div class="info">
+                      <a class="author" href="/@Xiaohong Jiménez">
+                        "Xiaohong Jiménez"
+                      </a>
+                      <span class="date">
+                        "Sat May 17 2025"
+                      </span>
+                    </div>
+                    <div class="pull-xs-right">
+                      <button class="btn btn-sm btn-primary">
+                        <i class="ion-heart">
+                        </i>
+                        "1"
+                      </button>
+                    </div>
+                  </div>
+                  <a class="preview-link" href="/article/quantifying-the-microchip-wont-do-anything-we-need-to-index-the-online-SQL-hard-drive!-2">
+                    <h1>
+                      "quantifying the microchip wont do anything, we need to index the online SQL hard drive!"
+                    </h1>
+                    <p>
+                      "Rerum aut expedita ad nam rerum. Animi sed in sunt enim. Rerum aspernatur ipsam quia consequatur sit est excepturi quidem voluptatem. Eum est et autem ducimus eius quod ipsa officia vero."
+                    </p>
+                    <span>
+                      "Read more..."
+                    </span>
+                    <ul class="tag-list">
+                      <li class="tag-default tag-pill tag-outline">
+                        "voluptatibus"
+                      </li>
+                      <li class="tag-default tag-pill tag-outline">
+                        "et"
+                      </li>
+                      <li class="tag-default tag-pill tag-outline">
+                        "consequatur"
+                      </li>
+                      <li class="tag-default tag-pill tag-outline">
+                        "fugiat"
+                      </li>
+                    </ul>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
