--- a/html_data/settings.html
+++ b/html_data/settings.html
@@ -56,6 +56,7 @@
                   </fieldset>
                   <fieldset class="form-group">
                     <textarea class="form-control form-control-lg" rows="8" placeholder="Short bio about you">
+                      "goodgoodgood"
                     </textarea>
                   </fieldset>
                   <fieldset class="form-group">
@@ -143,6 +144,7 @@
                   </fieldset>
                   <fieldset class="form-group">
                     <textarea class="form-control form-control-lg" rows="8" placeholder="Short bio about you">
+                      "goodgoodgood"
                     </textarea>
                   </fieldset>
                   <fieldset class="form-group">
